# TradeRacer

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  txtx.yml
docs/: architecture.md  current-task.md  debugging-notes.md  decisions.md  setup.md
patches/session-keys/: Cargo.toml
programs-ecs/components/game-config/src/: lib.rs
programs-ecs/components/leaderboard/src/: lib.rs
programs-ecs/components/player-registry/src/: lib.rs
programs-ecs/components/player-state/src/: lib.rs
programs-ecs/libs/shared/src/: lib.rs
programs-ecs/systems/close-position/: Cargo.toml
programs-ecs/systems/close-position/src/: lib.rs
programs-ecs/systems/end-game/: Cargo.toml
programs-ecs/systems/end-game/src/: lib.rs
programs-ecs/systems/init-game/: Cargo.toml
programs-ecs/systems/init-game/src/: lib.rs
programs-ecs/systems/open-position/: Cargo.toml
programs-ecs/systems/open-position/src/: lib.rs
programs-ecs/systems/refresh-leaderboard/: Cargo.toml
programs-ecs/systems/refresh-leaderboard/src/: lib.rs
programs-ecs/systems/spawn-player/: Cargo.toml
programs-ecs/systems/spawn-player/src/: lib.rs
programs-ecs/systems/start-game/: Cargo.toml
programs-ecs/systems/start-game/src/: lib.rs
programs/trade-fight/: Cargo.toml
programs/trade-fight-lobby/: Cargo.toml
programs/trade-fight-lobby/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/trade-fight-lobby/src/instructions/: close_lobby.rs  create_lobby.rs  distribute_prize.rs  join_lobby.rs  leave_lobby.rs  mod.rs  refund_lobby.rs  start_match.rs
programs/trade-fight/src/: lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: measure-tx-size.ts  trade-fight.ts
