[package]
name = "close-position"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "close_position"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
game-config = { version = "0.2.4", path = "../../components/game-config", features = ["cpi"] }
player-state = { version = "0.2.4", path = "../../components/player-state", features = ["cpi"] }
shared = { path = "../../libs/shared" }
